--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "yarn build-js && yarn build-png",
     "build-js": "webpack --mode production",
     "build-png": "jsexe -cn -po ./dist/bundle.js ./dist/out.png.html",
-    "h": "start http://localhost:8081/out.png.html && http-server ./dist"
+    "h": "start http://localhost:8081/out.png.html && http-server ./dist",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint-fix": "eslint --fix \"src/**/*.{ts,tsx}\""
   },
   "devDependencies": {
     "@fms-cat/automaton": "^4.1.0",
@@ -20,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "glslify-loader": "^2.0.0",
     "html-webpack-plugin": "^5.3.0",
     "loader-utils": "^2.0.0",
