dev: MusicWrite, best for outputting a wav

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@fms-cat/automaton-with-gui": "^4.1.1",
     "@fms-cat/experimental": "^0.5.0",
     "@fms-cat/glcat-ts": "^0.14.2",
+    "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "audiobuffer-to-wav": "^1.0.0",
     "eslint": "^7.21.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "glslify-loader": "^2.0.0",
